# cosmograph

./: .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.yml  ecosystem.config.js  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/v0.2.0/: ROADMAP.md
.planning/phases/01-foundation-cleanup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-pdf-extractor/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-pattern-configuration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-llm-extractor/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-fastapi-backend/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  (+7 more)
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx
src/cosmograph/: __init__.py  cli.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_extractors.py  test_generators.py  test_llm_extractor.py  test_models.py  test_patterns.py  test_services.py
tests/fixtures/: sample_code.txt  sample_constitution.txt
traefik/dynamic/: cosmograph.yml
(+63 files in other folders)
