[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmograph"
version = "0.1.0"
description = "Generate interactive knowledge graph visualizations from documents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Iyeska LLC", email = "dev@iyeska.net" }
]
keywords = ["knowledge-graph", "visualization", "documents", "cosmograph", "d3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-pyyaml>=6.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
llm = [
    "anthropic>=0.76.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cosmograph = "cosmograph.cli:app"

[project.urls]
Homepage = "https://github.com/guthdx/cosmograph"
Repository = "https://github.com/guthdx/cosmograph"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmograph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
